--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,8 +4,9 @@
 
 tasks:
   - init: npm install && npm run build
-    command: npm run dev
-
+    command: | 
+      export HRM_HOST=`gp url 3000`
+      npm run dev
 
 ports:
   - port: 3000
